<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment3</string>
    <!-- Weather Widget -->
    <string name="view_start">Start</string>
    <string name="title_weather">Weather</string>
    <string name="view_end">End</string>
    <string name="sunny">Sunny</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="temp">Temp: </string>
    <string name="wind">Wind: </string>
    <string name="rain">Rain: </string>
    <string name="noInternet">No Internet Connection Available</string>
    <string name="title_activity_city_list">CityList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather_widget_configure">WeatherWidgetConfigure</string>
    <string name="city">City:</string>
    <string name="no_data">No data available!</string>
    <string name="btn_update">Update</string>
    <!-- Incoming Calls -->
    <string name="empty">No incoming calls detected</string>
    <string name="title_activity_call_log">CallLog</string>
    <string name="title_activity_dialog_send">DialogSend</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_send">Send Number!</string>
    <string name="delete">Delete</string>
    <string name="send_message">Send as message</string>
    <string name="call">Call Number</string>
    <string name="send_via">Send Number with:</string>
    <string name="no_messaging_app">Nothing installed to send a message</string>

</resources>
